tests/error/extend_typedef2.gw
// [contains] can't use empty
typedef Object[] Class;
class C extends Class {}
C c;
<<<c>>>;
